# midgard-api-catalog-week3-main

./: README.md
api/: Cargo.toml  Procfile
api/migrations/: 01_create_initial_tables.sql
api/src/: api.rs  db.rs  main.rs  midgard_api.rs  models.rs  populate_db.rs  scheduler.rs  utils.rs
api/src/api/: routes.rs
api/src/api/routes/: depth_price_history.rs  docs.rs  earnings_history.rs  rune_pool_history.rs  swaps_history.rs
api/src/db/: insertions.rs
api/src/midgard_api/: handlers.rs  interface.rs
api/src/models/: depth_price_history.rs  earnings_history.rs  rune_pool_history.rs  swaps_history.rs
