[package]
name = "rust-midgard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["chrono_0_4"]}
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "migrate",
    "bigdecimal"
] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
